CherryPy + Mako + Formish + OOOP boilerplate changelog
======================================================


0.1.dev - unreleased / work in progress
---------------------------------------

 * First public release.
   [2011-08-23] kdeldycke


0.0 - 2011-05-09
----------------

 * Start of project.
   [2011-05-09] kdeldycke
